src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/ARBTransposeMatrix_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/ARBTransposeMatrix_StringErrorContext.class */
public final class ARBTransposeMatrix_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglLoadTransposeMatrixfARB(J)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTransposeMatrixErrorContext");
        methods.put("glLoadTransposeMatrixfARB(Ljava/nio/FloatBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTransposeMatrixErrorContext");
        methods.put("nglLoadTransposeMatrixdARB(J)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTransposeMatrixErrorContext");
        methods.put("glLoadTransposeMatrixdARB(Ljava/nio/DoubleBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTransposeMatrixErrorContext");
        methods.put("nglMultTransposeMatrixfARB(J)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTransposeMatrixErrorContext");
        methods.put("glMultTransposeMatrixfARB(Ljava/nio/FloatBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTransposeMatrixErrorContext");
        methods.put("nglMultTransposeMatrixdARB(J)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTransposeMatrixErrorContext");
        methods.put("glMultTransposeMatrixdARB(Ljava/nio/DoubleBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTransposeMatrixErrorContext");
        methods.put("glLoadTransposeMatrixfARB([F)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTransposeMatrixErrorContext");
        methods.put("glLoadTransposeMatrixdARB([D)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTransposeMatrixErrorContext");
        methods.put("glMultTransposeMatrixfARB([F)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTransposeMatrixErrorContext");
        methods.put("glMultTransposeMatrixdARB([D)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTransposeMatrixErrorContext");
        return methods;
    }
}
